Added new elements into page such as title, heading and paragraph

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>Hello</h1>
+<body>
+    <title> Conch </title>
+    
+    <h1>This is just a quick heading</h1>
+    <p>Attempting to learn something new rather than not doing anything this summer.</p>
+
+
+
+</body>
