Added a new file for the css, there's some new code in index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,24 @@
-<body>
+<html>
+<head>
     <title> Conch </title>
-    
+	<link rel="stylesheet" href="style.css" title="external style sheet">
+    </head>
+<body>
     <h1>This is just a quick heading</h1>
-    <p>Attempting to learn something new rather than not doing anything this summer.</p>
+    <p lang="en-us">Attempting to learn something new rather than not doing anything this summer.</p>
+	<p>This is utter bullshit - just typing to fill up space</p>
+	
+	<!-- Address:
+		this element has quite a specific use: to contain contact details for the authore of the page.
+-->
+	<address>
+		<p><a href="mailto:stcns22@moravian.edu"> stcns22@moravian.edu</a></p>
+		<p>Fake addrs</p></address>
 
-
+	
 
 </body>
+ </html>
+body{ font-family:Arial;}
+
+
