Modified alot of stuff - currently have the mitu logo added into the document

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ time to comment all -->
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Concepcion Sosa</title>
+	<title>Concepción Sosa-Resume</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	<!--Custom fonts. To improve load times, remove this and update the h1 styling in style.css--> 
 	<link href='http://fonts.googleapis.com/css?family=Lato:300,700' rel='stylesheet' type='text/css'>
@@ -34,10 +34,15 @@ time to comment all -->
 </head>
 	<body>
 	
+	
 	<!-- Header-->
 	<header>
-		<h1>Concepcion Sosa</h1>
+		<h1>Concepción Sosa</h1>
 		<p>Chingona</p>
+		<img src="mitu_2x.png"
+		alt="Logo"
+		style="float:left;background-color:#800bf3;">
+		
 	</header>
 	
 	<div class="container">
